[package]
name = "rcomplex"
version = "0.1.0"
authors = ["Eivind Eide <eivind@vikenfiber.no>"]
description = "A simple class for manipulating complex numbers."
license = "MIT/Apache-2.0"

[Badges]

keywords = ["math", "complex"]
categories = ["Algorithms", "Science"]

# Travis CI: `repository` in format "<user>/<project>" is required.
# `branch` is optional; default is `master`
travis-ci = { repository = "ereide/rust_complex", branch = "master" }

maintenance = { status = "experimental" }

[dependencies]
