[package]
name = "rcomplex"
version = "0.1.1"
authors = ["Eivind Eide <eivind@vikenfiber.no>"]
description = "A simple class for manipulating complex numbers."
license = "MIT/Apache-2.0"

keywords = ["math", "complex"]
categories = ["Algorithms", "Science"]

[badges]
travis-ci = { repository = "ereide/rust_complex", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
