[package]
name = "rcomplex"
version = "0.1.2"
authors = ["Eivind Eide <eivind@vikenfiber.no>"]
description = "A simple class for manipulating complex numbers. This project is mainly for educational purposes, and I reccomend using other more complete packages for complex math."
license = "MIT/Apache-2.0"

keywords = ["math", "complex"]
categories = ["algorithms", "science"]

[badges]
travis-ci = { repository = "ereide/rust_complex", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
